# frhop

./: .gitignore  Cargo.toml  README.md  build.sh  build_windows.sh  test.py
src/: listing.rs  main.rs
src/device/: interface.rs  mod.rs  packet.rs  query.rs  writer.rs
src/device/hosts/: mod.rs
src/device/hosts/sphaira/: mod.rs  packet.rs  server.rs
src/device/hosts/tinfoil/: mod.rs  query.rs
src/game/: entry.rs  info.rs  listing.rs  mod.rs  nsp.rs
