[package]
name = "frhop"
version = "1.0.0"
edition = "2024"
description = "Rust utility for serving Switch archives over USB to the Tinfoil homebrew application on Nintendo Switch"
repository = "https://github.com/SmartBoy84/frhop"
readme = "README.md"
authors = [
    "John Smith"
]
license = "MIT"

[dependencies]
bytemuck = { version = "1.23.1", features = ["derive"] }
ctrlc = "3.4.7"
futures-io = "0.3.31"
miniserde = "0.1.42"
notify = "8.1.0"
nusb = { version = "0.2.0-beta.2", features = ["smol"] }
smol = "2.0.2"
thiserror = "2.0.12"

[profile.release]
strip = true  # I don't use panic
lto = true
codegen-units = 1
panic = "abort" # reap the reward of having to fiddle with erors...
